M composer.json M examples/example1.php M examples/index.php ?? examples/example2.php

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,14 @@
             "src/functions.php",
             "src/dc.php"
         ],
-        "psr-4": {
-        }
+        "psr-4": {}
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "composer dump-autoload"
+        ],
+        "post-update-cmd": [
+            "composer dump-autoload"
+        ]
     }
 }
