M composer.json M composer.lock M examples/index.php ?? examples/example3.php ?? src/Debug/

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "files": [
             "src/functions.php",
             "src/dc.php"
-        ]
+        ],
+        "psr-4": {
+            "Martinm\\": "src"
+        }
     },
     "scripts": {
         "post-install-cmd": [
