--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,32 @@
 {
-    "name": "neocortexbg/php-debug",
-    "description": "Php debug functions",
+    "name": "martinmdev/php-debug",
+    "license": "MIT",
+    "description": "PHP Debug functions",
     "require": {
         "primal/color": "^1.0"
     },
     "autoload": {
         "files": [
-            "src/functions.php",
-            "src/dc.php"
+            "src/Debug/helpers.php"
         ],
         "psr-4": {
+            "Martinm\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.3"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Martinm\\Test\\": "tests/"
+        }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "composer dump-autoload"
+        ],
+        "post-update-cmd": [
+            "composer dump-autoload"
+        ]
     }
 }
